// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputText /> renders  without error 1`] = `
<div
  className="c-input text  "
>
  <label
    className=""
    htmlFor="field"
  >
    <span
      className="labelText"
    >
      field
    </span>
    <input
      autoComplete="off"
      className="ant-input roundInput"
      disabled={false}
      id="field"
      name="field"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`<InputText /> renders disabled 1`] = `
<div
  className="c-input text  "
>
  <label
    className="disabled"
    htmlFor="field"
  >
    <span
      className="labelText"
    >
      field
    </span>
    <input
      autoComplete="off"
      className="ant-input ant-input-disabled roundInput not-allowed"
      disabled={true}
      id="field"
      name="field"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`<InputText /> renders error, and touched 1`] = `
<div
  className="c-input text  "
>
  <label
    className=""
    htmlFor="field"
  >
    <span
      className="labelText"
    >
      field
    </span>
    <input
      autoComplete="off"
      className="ant-input roundInput"
      disabled={false}
      id="field"
      name="field"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`<InputText /> renders error, not touched 1`] = `
<div
  className="c-input text  "
>
  <label
    className=""
    htmlFor="field"
  >
    <span
      className="labelText"
    >
      field
    </span>
    <input
      autoComplete="off"
      className="ant-input roundInput"
      disabled={false}
      id="field"
      name="field"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`<InputText /> renders search 1`] = `
<div
  className="c-input text  "
>
  <label
    className=""
    htmlFor="field"
  >
    <span
      className="labelText"
    >
      field
    </span>
    <span
      className="ant-input-search roundInput ant-input-affix-wrapper"
    >
      <input
        autoComplete="off"
        className="ant-input"
        disabled={false}
        id="field"
        name="field"
        onChange={[Function]}
        onKeyDown={[Function]}
        style={null}
        type="text"
        value=""
      />
      <span
        className="ant-input-suffix"
      >
        <i
          aria-label="icon: search"
          className="anticon anticon-search ant-input-search-icon"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="search"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
            />
          </svg>
        </i>
      </span>
    </span>
  </label>
</div>
`;
